# docsearch

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.github/workflows/: ci.yml
examples/: search.rs
src/: crates.rs  error.rs  fqn.rs  index.rs  lib.rs  main.rs  simple_path.rs  version.rs
src/fixtures/: anyhow-1.0.0.html  anyhow-1.0.30.html  anyhow-1.0.42.html  anyhow-1.0.53.html  anyhow-1.0.70.html  anyhow-1.0.72.html  serde-1.0.163.html  syn-1.0.96.html  syn-208.html  thiserror-1.0.26.html  tinyvec-1.5.1.html  tinyvec-1.5.1.js
src/index/: mod.rs  v1.rs  v2.rs
src/index/fixtures/: anyhow-1.0.0.js  anyhow-1.0.30.js  anyhow-1.0.42.js  anyhow-1.0.53.js  anyhow-1.0.70.js  anyhow-1.0.72.js  cargo-1.0.163.js  syn-1.0.96.js  syn-2.0.8.js  thiserror-1.0.26.js
src/index/snapshots/: docsearch__index__tests__generate_mapping@anyhow-1.0.0.js.snap  docsearch__index__tests__generate_mapping@anyhow-1.0.30.js.snap  docsearch__index__tests__generate_mapping@anyhow-1.0.42.js.snap  docsearch__index__tests__generate_mapping@anyhow-1.0.53.js.snap  docsearch__index__tests__generate_mapping@anyhow-1.0.70.js.snap  docsearch__index__tests__generate_mapping@anyhow-1.0.72.js.snap  docsearch__index__tests__generate_mapping@cargo-1.0.163.js.snap  docsearch__index__tests__generate_mapping@syn-1.0.96.js.snap  docsearch__index__tests__generate_mapping@syn-2.0.8.js.snap  docsearch__index__tests__generate_mapping@thiserror-1.0.26.js.snap  docsearch__index__tests__generate_mapping@tinyvec-1.5.1.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.0.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.30.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.42.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.53.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.70.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.72.js.snap  docsearch__index__tests__load_raw@cargo-1.0.163.js.snap  docsearch__index__tests__load_raw@syn-1.0.96.js.snap  docsearch__index__tests__load_raw@syn-2.0.8.js.snap  docsearch__index__tests__load_raw@thiserror-1.0.26.js.snap  docsearch__index__tests__load_raw@tinyvec-1.5.1.js.snap  docsearch__index__tests__transform@anyhow-1.0.0.js.snap  docsearch__index__tests__transform@anyhow-1.0.30.js.snap  docsearch__index__tests__transform@anyhow-1.0.42.js.snap  docsearch__index__tests__transform@anyhow-1.0.53.js.snap  docsearch__index__tests__transform@anyhow-1.0.70.js.snap  (+17 more)
src/snapshots/: docsearch__crates__tests__find_index_path@anyhow-1.0.0.html.snap  docsearch__crates__tests__find_index_path@anyhow-1.0.30.html.snap  docsearch__crates__tests__find_index_path@anyhow-1.0.42.html.snap  docsearch__crates__tests__find_index_path@anyhow-1.0.53.html.snap  docsearch__crates__tests__find_index_path@anyhow-1.0.70.html.snap  docsearch__crates__tests__find_index_path@anyhow-1.0.72.html.snap  docsearch__crates__tests__find_index_path@serde-1.0.163.html.snap  docsearch__crates__tests__find_index_path@syn-1.0.96.html.snap  docsearch__crates__tests__find_index_path@syn-208.html.snap  docsearch__crates__tests__find_index_path@thiserror-1.0.26.html.snap  docsearch__crates__tests__find_index_path@tinyvec-1.5.1.html.snap  docsearch__index__tests__generate_mapping@anyhow-1.0.42.js.snap  docsearch__index__tests__generate_mapping@anyhow-1.0.53.js.snap  docsearch__index__tests__generate_mapping@thiserror-1.0.26.js.snap  docsearch__index__tests__generate_mapping@tinyvec-1.5.1.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.42.js.snap  docsearch__index__tests__load_raw@anyhow-1.0.53.js.snap  docsearch__index__tests__load_raw@thiserror-1.0.26.js.snap  docsearch__index__tests__load_raw@tinyvec-1.5.1.js.snap  docsearch__index__tests__transform@anyhow-1.0.42.js.snap  docsearch__index__tests__transform@anyhow-1.0.53.js.snap  docsearch__index__tests__transform@thiserror-1.0.26.js.snap  docsearch__index__tests__transform@tinyvec-1.5.1.js.snap
