[package]
name = "docsearch"
version = "0.3.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.58"
license = "MIT"
readme = "README.md"
description = "Resolve crate items to rustdoc URLs."
homepage = "https://github.com/dnaka91/docsearch"
repository = "https://github.com/dnaka91/docsearch"
categories = ["parser-implementations"]
keywords = ["mapping", "rustdoc", "search-index"]
include = ["src/**/*", "LICENSE", "README.md", "!**/fixtures/**/*", "!**/snapshots/**/*"]

[features]
default = ["index-v1", "index-v2"]
index-v1 = ["index-v2", "chumsky", "serde_tuple"]
index-v2 = ["serde_tuple"]

[dependencies]
chumsky = { version = "0.8.0", optional = true }
semver = { version = "1.0.6", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
serde_tuple = { version = "0.5.0", optional = true }
thiserror = "1.0.30"
tracing = "0.1.32"
unicode-ident = "1.0.0"

[dev-dependencies]
anyhow = "1.0.56"
env_logger = "0.9.0"
insta = { version = "1.13.0", features = ["glob"] }
reqwest = { version = "0.11.10", default-features = false, features = ["gzip", "rustls-tls"] }
tokio = { version = "1.17.0", features = ["macros", "rt"] }
