[package]
name = "docsearch"
version = "0.3.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
readme = "README.md"
description = "Resolve crate items to rustdoc URLs."
homepage = "https://github.com/dnaka91/docsearch"
repository = "https://github.com/dnaka91/docsearch"
categories = ["parser-implementations"]
keywords = ["mapping", "rustdoc", "search-index"]
include = ["src/**/*", "LICENSE", "README.md", "!**/fixtures/**/*", "!**/snapshots/**/*"]

[features]
default = ["index-v1", "index-v2"]
index-v1 = ["index-v2", "dep:chumsky", "dep:serde_tuple"]
index-v2 = ["dep:serde_tuple"]

[dependencies]
chumsky = { version = "0.8.0", optional = true }
semver = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_repr = "0.1.8"
serde_tuple = { version = "0.5.0", optional = true }
thiserror = "1.0.31"
tracing = "0.1.34"
unicode-ident = "1.0.0"

[dev-dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
insta = { version = "1.14.1", features = ["glob", "yaml"] }
reqwest = { version = "0.11.10", default-features = false, features = ["gzip", "rustls-tls"] }
tokio = { version = "1.18.2", features = ["macros", "rt"] }
