[package]
name = "docsearch"
version = "0.3.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
readme = "README.md"
description = "Resolve crate items to rustdoc URLs."
homepage = "https://github.com/dnaka91/docsearch"
repository = "https://github.com/dnaka91/docsearch"
categories = ["parser-implementations"]
keywords = ["mapping", "rustdoc", "search-index"]
include = ["src/**/*", "LICENSE", "README.md", "!**/fixtures/**/*", "!**/snapshots/**/*"]

[features]
default = ["index-v1", "index-v2"]
index-v1 = ["index-v2", "dep:chumsky", "dep:serde_tuple"]
index-v2 = ["dep:serde_tuple"]

[dependencies]
chumsky = { version = "1.0.0-alpha.4", optional = true }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
serde_tuple = { version = "0.5.0", optional = true }
thiserror = "1.0.44"
tracing = "0.1.37"
unicode-ident = "1.0.11"

[dev-dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
insta = { version = "1.31.0", features = ["glob", "yaml"] }
reqwest = { version = "0.11.18", default-features = false, features = ["gzip", "rustls-tls"] }
serde_test = "1.0.176"
tokio = { version = "1.29.1", features = ["macros", "rt"] }
